--- a/index3.html
+++ b/index3.html
@@ -9,7 +9,7 @@
 			<form action="server" method="POST"> <!-- Action aonde voce quer enviar Metodo Post ou Git o Post é a forma mais correta ele envia seus dados para o servidor o GET também mas é menos seguro --> 
 				<label> Digite o Nome: </label>
 				<input type="text"name="nome_user" id="n_user" maxlength="10" placeholder="Meu Nome" size="30" required = "true" ><br/> <!-- Type = tipo de Texto ID = Espesse de variavel para ser localizada mais facil , Maxlength = Limite de caractere -->
-				<label> Senha: </label>
+				<label> Password: </label>
 				<input type="password"name="senha_user" id="s_user"maxlength="50"><br/> <!--Value valor informativo para o campo, placeholder usado igual o Value mas é melhor para ser usado em campos Size o tamanho do formulario -->
 				<Title> Observaçoes</title>
 				<br/>
@@ -34,12 +34,12 @@
 					<option value="Mato Grosso">MT</option>
 					<option value="Mato Grosso do Sul">MS</option>
 					<option value="Minas Gerais">MG</option>
-					<option value="Pará">Pará</option>
-					<option value="Paraíba">Paraíba</option>
+					<option value="Pará">PA</option>
+					<option value="Paraíba">PR</option>
 					<option value="Paraná">Paraná</option>
 					<option value="Pernambuco">Pernambuco</option>
 					<option value="Piauí">Piauí</option>
-					<option value="Rio de Janeiro">Rio de Janeiro</option>
+					<option value="Rio de Janeiro">RJ</option>
 					<option value="Rio Grande do Sul">Rio Grande do Sul</option>
 					<option value="Rio Grande do Norte">Rio Grande do Norte</option>
 					<option value="Rondônia">Rondônia</option>
